--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "yarn run dev",
     "serve": "live-server ./public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -25,6 +26,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "eslint": "^4.11.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
     "moment": "^2.19.2",
