--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Andrew Mead",
   "license": "MIT",
   "scripts": {
-    "start": "yarn run dev",
-    "serve": "live-server ./public/",
+    "start": "node server/server.js",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -26,6 +26,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "eslint": "^4.11.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
