--- a/package.json
+++ b/package.json
@@ -23,13 +23,9 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
     "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "eslint": "^4.11.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "^2.19.2",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -41,20 +37,23 @@
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "16.0.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "^3.1.0",
     "validator": "^8.0.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
