--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.19.2",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "^16.1.0",
     "react-addons-shallow-compare": "^15.6.0",
@@ -45,13 +46,13 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
     "webpack-dev-server": "^2.5.1"
